apps/app1/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: argocd
  labels:
    app: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: reg.rsn-okd.netcloud.lab:8880/app1/app1@sha256:25f28e2d1668c9662767e7202a380fd5e9eb13773a97628ac5d0117ac372a611
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: argocd
  labels:
    app: app1
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app1
  namespace: argocd
spec:
  to:
    kind: Service
    name: app1
  port:
    targetPort: 80
  tls:
    termination: edge  # Optional: Entfernen, wenn unverschlüsselt
